src/test/ui/pattern/usefulness/issue-15129.stderr
error[E0004]: non-exhaustive patterns: `(T1(()), V2(_))` and `(T2(()), V1(_))` not covered
  --> $DIR/issue-15129.rs:12:11
   |
LL |     match (T::T1(()), V::V2(true)) {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^ patterns `(T1(()), V2(_))` and `(T2(()), V1(_))` not covered
   |
   = note: the matched value is of type `(T, V)`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~         (T::T2(()), V::V2(b)) => (),
LL ~         (T1(()), V2(_)) | (T2(()), V1(_)) => todo!(),
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
